--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="../src/css/global-styles.css">
     <link rel="stylesheet" href="../src/css/font.css">
+    <link rel="stylesheet" href="../src/css/main-page.css">
     <title>Faq Accordion Card</title>
   </head>
   <body>
